src/styles.css
@font-face {
	font-family: Lexend;
	src: url(Lexend-Regular.ttf);
	font-weight: normal;
}

@font-face {
	font-family: Lexend;
	src: url(Lexend-Bold.ttf);
	font-weight: bold;
}

#panic {
	position: fixed;
	top: 0px;
	left: 0px;
	background-color: #000;
	width: 100vw;
	height: 100vh;
	z-index: -99; /* ensure never overlapping something */
}

.onTop {z-index:9999 !important}

body {
	color: #fff;
	text-align: center;
	user-select: none;
	overflow: hidden;
	margin-top: 2em;

	opacity: 0;

	transition: background-color 300ms;
}

body, button {
	font-family: 'Lexend', 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
}

* {margin: 1px}
*:focus-visible {
	outline: #fff dotted 2px;
	transition: none;
}

@media (prefers-reduced-motion) {
	button::before{transition:none!important}
	button p{transition:none!important}
}

.hidden {display: none !important}

.centered {
	position: fixed;
	left: 50%;
	top: 50%;

	transform: translate(-50%, -50%);
}

.fadein {animation: fadein 300ms}
.fadeout {animation: fadein 300ms reverse}
@keyframes fadein {
	from {opacity:0}
	to {opacity:1}
}

a {color: #00aeff}

.cursor-wait {cursor:wait}
#cursor-wait-hbox {
	position: absolute;
	left: 0;
	top: 0;
	width: 100vw;
	height: 100vh;

	background-color: #00000062;

	z-index: 9999;
}

#main-container {
	margin-right: 50px;
	margin-left: 50px;
}

#title {
	transform-origin: center;
	transform: rotate(-3deg);
}
#title span {
	transform: rotate(1.4deg);
	font-size: 0.6em;
	color: #b4b4b4;

	position: absolute;
	bottom: -0.5em;
	right: 6.5em;
}

#copyright {
	position: fixed;
	left: 5px;
	bottom: 5px;
	margin: 0px;
	color: #858585;
}

#done-txt {
	position: fixed;
	left: 50%;
	top: 38%;
	transform: translate(-50%, -50%);
	color: lightgreen;
}

#btn-optimize {
	position: fixed;
	left: 50%;
	top: 50%;
}

#btn-studio {
	position: fixed;
	left: 50%;
	top: 63.5%;
}

.transform-centering {transform: translate(-50%, -50%)}
/* for some STUPID REASON you need a transform for some buttons
i hatecssihatecssihatecss */
.transform-none {transform: translate(0px, 0px)}

/* okay not half but you get the point */
button.half-width {width: 198px; padding: 0.3em 0.6em}
button.half-height {height: 60px}
button.half-height p {font-size: 0.6em}
button.secondary-btn {
	position:fixed;
	top: 75.5%;
}
button.secondary-btn.left {
	left: 300px
}
button.secondary-btn.right {
	left: 500px;
}

button {
	background-color: #101010;
	padding: 0.6em 1.2em;
	border: none;
	border-radius: 1ex;
	font-size: 2em;

	cursor: pointer;

	transition: background-color 300ms, color 300ms;
	/* TODO: make height adjustment work */

	overflow: hidden;

	width: 400px;
	height: 80px;
}

button::before {
	background-color: #fff;
	content: '';
	position: absolute;
	width: 100%;
	height: 100%;
	left: 0;
	top: 0;
	transition: transform 300ms ease, background-color 300ms;

    transform: skewX(0deg) translateY(-100%);
}
button[disabled]::before {background-color: #ffffff33}

button p {
	position: relative;
	margin: 0px;
	padding: 0px;
	color: #fff;

	transition: color 300ms;
	z-index: 100;
}
button:not([disabled]):hover p {
	color: #000;
}
button:hover::before {
	transform: skewX(0deg) translateY(0%);
}

@keyframes spin-infinite {
	0%{stroke-dasharray:0.01px 43.97px;transform:rotate(0deg)}
	50%{transform:rotate(450deg);stroke-dasharray:21.99px 21.99px}
	100%{stroke-dasharray:.01px 43.97px;transform:rotate(1080deg)}
}

#_d_advanced {
	position: fixed;
	left: 8%;
	top: 8%;
	height: 450px;
	width: 600px;
}

dialog {
	padding: 30px;
	background-color: #141414;
	border: #fff;
	border-radius: 1ex;
	color: #eee;
	border: transparent;

	transition: opacity 0.3s, transform 0.3s;
}

